// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshot Tests should match snapshot - basic text 1`] = `
<Text
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  maxFontSizeMultiplier={1.2}
  style={
    {
      "color": "#161F4C",
      "fontFamily": "CustomFont-Regular",
    }
  }
>
  Basic Text
</Text>
`;

exports[`Text Snapshot Tests should match snapshot - complex props 1`] = `
<Text
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  maxFontSizeMultiplier={1.2}
  numberOfLines={2}
  style={
    {
      "color": "blue",
      "fontFamily": "CustomFont-Regular",
      "fontSize": 28,
      "fontWeight": "600",
      "lineHeight": 30,
      "opacity": 0.9,
    }
  }
>
  Complex Text
</Text>
`;

exports[`Text Snapshot Tests should match snapshot - gradient text 1`] = `
<View
  testID="masked-view"
>
  <Text
    adjustsFontSizeToFit={false}
    allowFontScaling={true}
    maxFontSizeMultiplier={1.2}
    style={
      [
        {
          "color": "#161F4C",
          "fontFamily": "CustomFont-Regular",
        },
      ]
    }
  >
    Gradient Text
  </Text>
  <View
    testID="linear-gradient"
  >
    <Text
      style={
        [
          {
            "color": "#161F4C",
            "fontFamily": "CustomFont-Regular",
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      Gradient Text
    </Text>
  </View>
</View>
`;

exports[`Text Snapshot Tests should match snapshot - heading styles 1`] = `
<Text
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  maxFontSizeMultiplier={1.2}
  style={
    {
      "color": "#161F4C",
      "fontFamily": "CustomFont-Regular",
      "fontSize": 38,
    }
  }
>
  Heading 1
</Text>
`;

exports[`Text Snapshot Tests should match snapshot - with styling 1`] = `
<Text
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  maxFontSizeMultiplier={1.2}
  style={
    {
      "color": "red",
      "fontFamily": "CustomFont-Regular",
      "fontWeight": "800",
      "textAlign": "center",
    }
  }
>
  Styled Text
</Text>
`;
